// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentSlice > renders correctly 1`] = `
<div>
  <div
    class="comment separated hovered small-icon"
    id="comment-slice-1"
  >
    <slice-notes-icon-stub />
    <span
      class="comment-text pl-4"
      style="font-size: 14px;"
    >
      <!--v-if-->
       comment 1
    </span>
  </div>
  <!--v-if-->
</div>
`;

exports[`CommentSlice > renders correctly if comment segment has join id 1`] = `
<div>
  <div
    class="comment separated hovered small-icon"
    id="comment-slice-1"
  >
    <slice-notes-icon-stub />
    <span
      class="comment-text pl-3"
      style="font-size: 14px;"
    >
      <v-icon-stub
        class="mr-1 join-icon"
        disabled="false"
        end="false"
        size="16"
        start="false"
        tag="i"
      >
        M3.9,12C3.9,10.29 5.29,8.9 7,8.9H11V7H7A5,5 0 0,0 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12M8,13H16V11H8V13M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.71 18.71,15.1 17,15.1H13V17H17A5,5 0 0,0 22,12A5,5 0 0,0 17,7Z
      </v-icon-stub>
       comment 1
    </span>
  </div>
  <!--v-if-->
</div>
`;
